program_manager: detect interface block mismatches

This fixes the deqp/data/gles3/shaders/linkage.html tests that were
checking that compilation fail if interface blocks have different
layouts.

BUG=621031
CQ_INCLUDE_TRYBOTS=tryserver.chromium.linux:linux_optional_gpu_tests_rel;tryserver.chromium.mac:mac_optional_gpu_tests_rel;tryserver.chromium.win:win_optional_gpu_tests_rel

Review-Url: https://codereview.chromium.org/2147663002
Cr-Commit-Position: refs/heads/master@{#405256}

Former-commit-id: e4feb0d482d7b795afe2257ef8f304c4c1428151